k8s/weather-display/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-display
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: weather-display
